--- a/screenshots/readme
+++ b/screenshots/readme
@@ -1,1 +1,7 @@
 This dir contains screenshots of the software being operational.
+
+Blank - Shows the state of the software immediately after being launched.
+Project View - Shows the state of the software after clicking on one of the projects.
+AddingAnIndiviual - Shows Pop-Up that shows up when adding a new person to the project.
+IndividualAdded - Proves that after adding an individual to a project, their name becomes present on the list of all workers.
+
