--- a/screenshots/readme
+++ b/screenshots/readme
@@ -5,3 +5,4 @@ Project View - Shows the state of the software after clicking on one of the proj
 AddingAnIndiviual - Shows Pop-Up that shows up when adding a new person to the project.
 IndividualAdded - Proves that after adding an individual to a project, their name becomes present on the list of all workers.
 
+SoftwareWorking.mp4 - Shows the software in-action.
